--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,700' rel='stylesheet' type='text/css'>
+		<noscript>
+			<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,700' rel='stylesheet' type='text/css'>
+		</noscript>
 		<link rel="stylesheet" type="text/css" href="assets/stylesheets/styles.css">
 		<title>Hi, ich bin Thorben | www.thorbengrodon.de</title>
 		<meta name="robots" content="index,follow">
@@ -27,5 +29,8 @@
 			</ul>
 		</nav>
 		<script src="assets/javascripts/analytics.js" type="text/javascript"></script>
+		<script type="text/javascript">
+			document.head.innerHTML += '<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,700" rel="stylesheet" type="text/css">';
+		</script>
 	</body>
 </html>
