[SECURITY] Make use of rel=noopener

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<p>iOS Developer, Co-Gründer von <a href="http://codingworld.eu" title="Website von Coding World besuchen" target="_blank">Coding World UG</a><br> und immer gut für einen Witz.</p>
 		<nav class="social-nav">
 			<ul>
-				<li><a href="http://twitter.com/thorbengrodon" title="Besuch mich auf Twitter" target="_blank"><img src="assets/images/twitter.svg" alt="twitter.svg" width="32" height="32"></a></li>
+				<li><a href="http://twitter.com/thorbengrodon" title="Besuch mich auf Twitter" target="_blank" rel="noopener"><img src="assets/images/twitter.svg" alt="twitter.svg" width="32" height="32"></a></li>
 				<li><a href="mailto:Thorben%20Grodon<hallo@thorbengrodon.de>" title="Schreib mir eine E-Mail" target="_blank"><img src="assets/images/plane.svg" alt="plane.svg" width="32" height="32"></a></li>
 				<li><a href="impressum/" title="Impressum" target="_self"><img src="assets/images/info.svg" alt="info.svg" width="32" height="32"></a></a></li>
 			</ul>
