--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			<ul>
 				<li><a href="http://twitter.com/thorbengrodon" title="Besuch mich auf Twitter" target="_blank" rel="noopener"><img src="assets/images/twitter.svg" alt="twitter.svg" width="32" height="32"></a></li>
 				<li><a href="mailto:hallo@thorbengrodon.de" title="Schreib mir eine E-Mail" target="_blank"><img src="assets/images/plane.svg" alt="plane.svg" width="32" height="32"></a></li>
-				<li><a href="impressum/" title="Impressum" target="_self"><img src="assets/images/info.svg" alt="info.svg" width="32" height="32"></a></a></li>
+				<li><a href="impressum/" title="Impressum" target="_self"><img src="assets/images/info.svg" alt="info.svg" width="32" height="32"></a></li>
 			</ul>
 		</nav>
 		<script src="assets/javascripts/analytics.js" type="text/javascript"></script>
